--- a/portfolio-react/src/index.css
+++ b/portfolio-react/src/index.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap');
+@import "tailwindcss";
 
 html {
   scroll-behavior: smooth;
+  scroll-padding-top: 6rem;
 }
 
 :root {
